--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -1,5 +1,6 @@
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS base
 ARG APP
+ENV APP=$APP
 WORKDIR /app
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS publish
