feat(infra): build worker service (#66)
* feat(infra): build and deploy worker service

--- a/.github/workflows/deploy-be.yml
+++ b/.github/workflows/deploy-be.yml
@@ -18,35 +18,35 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Authenticate to Google Cloud
-        uses: 'google-github-actions/auth@v0.8.2'
+      - uses: ./.github/actions/deploy-be
         with:
-          credentials_json: '${{ secrets.CICD_SA_GCP_JSON_KEY }}'
-
-      - name: Run database migration
-        run: |
-          dotnet tool install --global dotnet-ef
-          dotnet ef database update --project Core.csproj --startup-project ../WebApi/WebApi.csproj
-        working-directory: src/backend/Core
-        env:
+          CICD_SA_GCP_JSON_KEY: ${{ secrets.CICD_SA_GCP_JSON_KEY }}
+          APP: "backend"
           DB_HOST: ${{ secrets.DB_HOST }}
           DB_USER: ${{ secrets.DB_USER }}
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
           DB_DATABASE: ${{ secrets.DB_DATABASE }}
           DB_PORT: 5432
 
-      - name: Deploy to Cloud Run
-        uses: 'google-github-actions/deploy-cloudrun@v1'
+  deploy-worker:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: ./.github/actions/deploy-be
         with:
-          region: 'europe-west1'
-          service: 'backend'
-          image: 'europe-docker.pkg.dev/indagoodhandsdev/default-docker/backend'
-          env_vars: |
-            DB_HOST=${{ secrets.DB_HOST }}
-            DB_USER=${{ secrets.DB_USER }}
-            DB_PASSWORD=${{ secrets.DB_PASSWORD }}
-            DB_DATABASE=${{ secrets.DB_DATABASE }}
-            DB_PORT=5432
+          CICD_SA_GCP_JSON_KEY: ${{ secrets.CICD_SA_GCP_JSON_KEY }}
+          APP: "worker"
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_DATABASE: ${{ secrets.DB_DATABASE }}
+          DB_PORT: 5432
+
+  sonar:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
 
       - name: sonar
         uses: ./.github/actions/sonar
