--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -3,7 +3,8 @@ FROM mcr.microsoft.com/dotnet/sdk:7.0 AS base
 WORKDIR /app
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS publish
-
+ARG APP
+ENV APP=$APP
 WORKDIR /app
 
 COPY ["src/backend/.", "."]
@@ -12,7 +13,7 @@ RUN dotnet restore
 
 COPY . .
 
-RUN dotnet publish "/app/WebApi/WebApi.csproj" -c Release -o /app/publish
+RUN dotnet publish "/app/$APP/$APP.csproj" -c Release -o /app/publish
 
 FROM publish AS test
 
@@ -30,4 +31,4 @@ ENV ASPNETCORE_URLS=http://+:5000
 
 EXPOSE 5000
 
-ENTRYPOINT ["dotnet", "WebApi.dll"]
+ENTRYPOINT dotnet ${APP}.dll
