--- a/.github/actions/build-be/action.yml
+++ b/.github/actions/build-be/action.yml
@@ -4,6 +4,9 @@ inputs:
   CICD_SA_GCP_JSON_KEY:
     description: 'Json key to GCP SA'
     required: true
+  APP:
+    description: 'Application to build'
+    required: true
 runs:
   using: "composite"
   steps:
@@ -17,4 +20,4 @@ runs:
     - name: Build, tag and push Docker image
       shell: bash
       run: |
-        ./infra/scripts/push_images.sh backend
+        ./infra/scripts/push_images.sh ${{ inputs.APP }}
