--- a/src/backend/Core/Core.csproj
+++ b/src/backend/Core/Core.csproj
@@ -12,13 +12,13 @@
 
 	<ItemGroup>
 		<SonarQubeSetting Include="sonar.coverage.exclusions">
-			<Value>CoreModule.cs,Configuration/**,Migrations/**,Database/**,Setup/**</Value>
+			<Value>CoreModule.cs,Configuration/**,Migrations/**,Database/**,Setup/**,Database/Seeders/**</Value>
 		</SonarQubeSetting>
 	</ItemGroup>
 
 	<ItemGroup>
 		<SonarQubeSetting Include="sonar.exclusions">
-			<Value>Configuration/**,Migrations/**</Value>
+			<Value>Configuration/**,Migrations/**,Database/Seeders/**</Value>
 		</SonarQubeSetting>
 	</ItemGroup>
 
