--- a/src/backend/Core/Core.csproj
+++ b/src/backend/Core/Core.csproj
@@ -12,7 +12,7 @@
 
 	<ItemGroup>
 		<SonarQubeSetting Include="sonar.coverage.exclusions">
-			<Value>CoreModule.cs,Configuration/**,Migrations/**,Database/**,Setup/**,Database/Seeders/**</Value>
+			<Value>CoreModule.cs,Configuration/**,Migrations/**,Database/**,Setup/**,Database/Seeders/**,Exceptions/**</Value>
 		</SonarQubeSetting>
 	</ItemGroup>
 
