--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "update-3rd-party": "npm update primeng angular-auth-oidc-client lodash luxon"
+    "update-3rd-party": "npm update primeng angular-auth-oidc-client lodash luxon @angular/google-maps"
   },
   "private": true,
   "dependencies": {
@@ -16,6 +16,7 @@
     "@angular/compiler": "^15.1.5",
     "@angular/core": "^15.1.5",
     "@angular/forms": "^15.1.5",
+    "@angular/google-maps": "^15.1.5",
     "@angular/platform-browser": "^15.1.5",
     "@angular/platform-browser-dynamic": "^15.1.5",
     "@angular/router": "^15.1.5",
