feat(sprint-3): mockups

--- a/src/backend/Core/Core.csproj
+++ b/src/backend/Core/Core.csproj
@@ -52,6 +52,7 @@
 
 	<ItemGroup>
 		<Folder Include="Migrations\" />
+		<Folder Include="Actions\" />
 		<Folder Include="Setup\Swagger\" />
 	</ItemGroup>
 
