--- a/.github/actions/deploy-be/action.yml
+++ b/.github/actions/deploy-be/action.yml
@@ -54,12 +54,6 @@ runs:
         DB_PASSWORD: ${{ inputs.DB_PASSWORD }}
         DB_DATABASE: ${{ inputs.DB_DATABASE }}
         DB_PORT: 5432
-        OAUTH2_AUTHORITY: ${{ inputs.OAUTH2_AUTHORITY }}
-        OAUTH2_AUDIENCE: ${{ inputs.OAUTH2_AUDIENCE }}
-        OAUTH2_CLIENT_ID: ${{ inputs.OAUTH2_CLIENT_ID }}
-        OAUTH2_SCOPES:  "openid profile offline_access email api"
-        FRONTEND_URL: "https://indagoodhandsdev.web.app/"
-        HASHIDS_SALT: ${{ inputs.HASHIDS_SALT }}
 
     - name: Deploy to Cloud Run
       uses: 'google-github-actions/deploy-cloudrun@v1'
@@ -76,6 +70,6 @@ runs:
           OAUTH2_AUTHORITY=${{ inputs.OAUTH2_AUTHORITY }} 
           OAUTH2_AUDIENCE=${{ inputs.OAUTH2_AUDIENCE }} 
           OAUTH2_CLIENT_ID=${{ inputs.OAUTH2_CLIENT_ID }} 
-          OAUTH2_SCOPES="openid profile offline_access email api"
-          FRONTEND_URL="https://indagoodhandsdev.web.app/"
+          OAUTH2_SCOPES=openid profile offline_access email api
+          FRONTEND_URL=https://indagoodhandsdev.web.app/
           HASHIDS_SALT=${{ inputs.HASHIDS_SALT }}   
