--- a/.github/actions/build-fe/action.yml
+++ b/.github/actions/build-fe/action.yml
@@ -16,7 +16,7 @@ runs:
       run: |          
         npm i -g @angular/cli
         npm ci
-        sed -i "s/GOOGLE_MAPS_KEY_HERE/{GOOGLE_MAPS_KEY/g" src/environments/environment.prod.ts
+        sed -i "s/GOOGLE_MAPS_KEY_HERE/$GOOGLE_MAPS_KEY/g" src/environments/environment.prod.ts
         ng build --configuration=production
       working-directory: src/frontend
 
