create getwarehouse action and its services, and Intergration Tests

--- a/src/backend/Donate/Donate.csproj
+++ b/src/backend/Donate/Donate.csproj
@@ -10,6 +10,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="7.18.5" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<SonarQubeSetting Include="sonar.coverage.exclusions">
 			<Value>DonateModule.cs</Value>
 		</SonarQubeSetting>
