--- a/src/backend/Core/Core.csproj
+++ b/src/backend/Core/Core.csproj
@@ -48,6 +48,7 @@
 		<PackageReference Include="System.Linq" Version="4.3.0" />
 		<PackageReference Include="System.Linq.Async" Version="6.0.1" />
 		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.25" />
+		<PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="7.18.5" />
 	</ItemGroup>
 
 	<ItemGroup>
