added new endpoint, new Integration Tests

--- a/src/backend/WebApi/WebApi.csproj
+++ b/src/backend/WebApi/WebApi.csproj
@@ -20,6 +20,7 @@
 		<ProjectReference Include="..\Auth\Auth.csproj" />
 		<ProjectReference Include="..\Core\Core.csproj" />
 		<ProjectReference Include="..\Donate\Donate.csproj" />
+		<ProjectReference Include="..\Order\Order.csproj" />
 	</ItemGroup>
 
 </Project>
