--- a/.github/actions/sonar/action.yml
+++ b/.github/actions/sonar/action.yml
@@ -30,6 +30,7 @@ runs:
       run: |
         dotnet test --collect:"XPlat Code Coverage" --results-directory ./coverage -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
       shell: bash
+      working-directory: src/backend
 
     - name: Download coverage report
       if: ${{ inputs.branch != 'feature' }}
