--- a/.github/actions/sonar/action.yml
+++ b/.github/actions/sonar/action.yml
@@ -25,6 +25,28 @@ runs:
         dotnet tool install --global dotnet-sonarscanner
       shell: bash
 
+    - name: Set variables for testing
+      if: ${{ inputs.branch == 'feature' }}
+      run: |
+        echo "DB_HOST=localhost" >> $GITHUB_ENV
+        echo "DB_USER=postgres" >> $GITHUB_ENV
+        echo "DB_PASSWORD=ingoodhands" >> $GITHUB_ENV
+        echo "DB_DATABASE=in_good_hands" >> $GITHUB_ENV
+        echo "DB_PORT=5432" >> $GITHUB_ENV
+        echo "OAUTH2_AUTHORITY=dummy" = >> $GITHUB_ENV
+        echo "OAUTH2_AUDIENCE=dummy" = >> $GITHUB_ENV
+        echo "OAUTH2_CLIENT_ID=dummy" = >> $GITHUB_ENV
+        echo "OAUTH2_SCOPES=dummy" = >> $GITHUB_ENV
+        echo "FRONTEND_URL=dummy" = >> $GITHUB_ENV
+        echo "HASHIDS_SALT=dummy" = >> $GITHUB_ENV
+      shell: bash
+
+    - name: Run backend and postgres for testing
+      if: ${{ inputs.branch == 'feature' }}
+      run: |
+        docker-compose -f docker-compose.ci.yml up -d
+      shell: bash
+
     - name: Run tests
       if: ${{ inputs.branch == 'feature' }}
       run: |
