--- a/.github/actions/sonar/action.yml
+++ b/.github/actions/sonar/action.yml
@@ -63,6 +63,7 @@ runs:
         workflow: build-test-all.yml
 
     - name: Move coverage report
+      if: ${{ inputs.branch != 'feature' }}
       shell: bash
       run: |
         find . -name "coverage.opencover.xml" -exec sh -c 'for f; do d=${f%/*}; mv -- "$f" "./src/backend/${d#./}${f##*/}"; done' findsh {} +
