feat(infra): move sonar

--- a/.github/actions/sonar/action.yml
+++ b/.github/actions/sonar/action.yml
@@ -63,10 +63,9 @@ runs:
         workflow: build-test-all.yml
 
     - name: Move coverage report
-      if: ${{ inputs.branch != 'feature' }}
       shell: bash
       run: |
-        find . -name "coverage.opencover.xml" -exec sh -c 'for f; do d=${f%/*}; mv -- "$f" "./src/backend/${d#./}${f##*/}"; done' findsh {} +
+        find . -name "coverage.opencover.xml" -exec sh -c 'for f; do d=${f%/*}; mv -- "$f" "./${d#./}${f##*/}"; done' findsh {} +
 
     - name: Build and analyze
       run: |
