--- a/.github/actions/sonar/action.yml
+++ b/.github/actions/sonar/action.yml
@@ -68,6 +68,13 @@ runs:
       run: |
         find . -name "coverage.opencover.xml" -exec sh -c 'for f; do d=${f%/*}; mv -- "$f" "./src/backend/${d#./}${f##*/}"; done' findsh {} +
 
+    - name: Move coverage report
+      if: ${{ inputs.branch == 'feature' }}
+      shell: bash
+      run: |
+        find . -name "coverage.opencover.xml" -exec sh -c 'for f; do d=${f%/*}; mv -- "$f" "../${d#./}${f##*/}"; done' findsh {} +
+      working-directory: src/backend/coverage
+
     - name: Build and analyze
       run: |
         reports=$(find . -type f -name "*coverage.opencover.xml" | xargs -n1 -I{} basename "{}" | tr '\n' ',')
