--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.2.2",
     "@angular/platform-browser-dynamic": "^15.2.2",
     "@angular/router": "^15.2.2",
+    "@angular/service-worker": "^15.2.2",
     "angular-auth-oidc-client": "^15.0.0",
     "lodash": "^4.17.21",
     "luxon": "^3.1.0",
