--- a/src/backend/Worker/Worker.csproj
+++ b/src/backend/Worker/Worker.csproj
@@ -19,5 +19,6 @@
 	<ItemGroup>
 		<ProjectReference Include="..\Core\Core.csproj" />
 		<ProjectReference Include="..\Donate\Donate.csproj" />
+		<ProjectReference Include="..\Order\Order.csproj" />
 	</ItemGroup>
 </Project>
