--- a/firebase.json
+++ b/firebase.json
@@ -11,6 +11,15 @@
         "source": "**",
         "destination": "/index.html"
       }
+    ],
+    "headers": [ {
+      "source": "**/*.html",
+      "headers": [ {
+        "key": "Cache-Control",
+        "value": "max-age=0, no-cache"
+      } ]
+    }
+
     ]
   }
 }
