feat(infra): change cache for index.html

--- a/firebase.json
+++ b/firebase.json
@@ -16,7 +16,7 @@
       "source": "**/*.html",
       "headers": [ {
         "key": "Cache-Control",
-        "value": "max-age=0, no-cache"
+        "value": "max-age=0, must-revalidate"
       } ]
     }
 
