feat(infra): change cache for index.html

--- a/.github/workflows/build-test-all.yml
+++ b/.github/workflows/build-test-all.yml
@@ -20,6 +20,7 @@ jobs:
           filters: |
             frontend:
               - 'src/frontend/**'
+              - 'firebase.json'
             backend:
               - 'src/backend/**'
             workflow:
