--- a/src/backend/Orders/Orders.csproj
+++ b/src/backend/Orders/Orders.csproj
@@ -19,4 +19,8 @@
 		<ProjectReference Include="..\Core\Core.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Actions\DeliveriesActions\NewFolder\" />
+	</ItemGroup>
+
 </Project>
